# kislateSat

./: .gitignore  README.md  REAMDE.md
generate/src/: main.cpp  sudoku_generator.cpp  sudoku_generator.h  sudoku_puzzle.cnf  sudoku_solver.cpp  sudoku_solver.h
project/: CMakeLists.txt  variable_index_optimization.md
project copy/: buildProject.bat  cleanProject.bat
project copy/include/: sat_solver.h
project copy/res/: 7cnf20_90000_90000_7.shuffled-20.res  problem1-20.res  problem11-100.res
project copy/src/: main.cpp  sat_solver.cpp
project/config/: README.md  cnf_config.yaml
project/include/: fileop.h  sat_data_structures.h  sat_solver.h  sudoku.h
project/res/: 1.res  2.res  3.res  4u.res  4（unsatisfied）.res  5.res  6.res  7cnf20_90000_90000_7.shuffled-20.res  problem1-20.res  problem2-50.res  zhuxu.res
project/src/: fileop.cpp  main.cpp  sat_data_structures.cpp  sat_solver.cpp  sudoku.cpp
project/sudoku_cnf/: puzzle_1756907424.cnf  puzzle_1756907424.ss  puzzle_1756907439.cnf  puzzle_1756907439.ss  puzzle_1756907851.cnf  puzzle_1756907851.ss  puzzle_1756908833.cnf  puzzle_1756908833.ss  puzzle_1756909151.cnf  puzzle_1756909151.ss  puzzle_1756909166.cnf  puzzle_1756909166.ss  puzzle_1756909777.cnf  puzzle_1756909777.ss
puresat/res/: test_com_L.res
puresat/src/: cnfparser.cpp  cnfparser.h  main.cpp  solver.cpp  solver.h
qwen/cnf/: generate.cnf  manual_sat.cnf  simple_sat.cnf  simple_unsat.cnf
qwen/res/: generate.res  manual_sat.res  simple_sat.res  sudoku_puzzle.res  test_1.res  test_2.res  test_com_L.res  test_com_M.res  test_com_S.res
(+5 files in other folders)
